# summer-internship

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  pyproject.toml
banks/summer-internship-2l4a2rhkddp5x/: mnemopi.db  mnemopi.db-shm  mnemopi.db-wal
data/: bm25_index.pkl  index_registry.json
data/batch/input/: query1.txt
data/projects/: samples.csv
data/test/input/: question1.txt  question2.txt
docs/: admin_guide.md  guide.txt  user_guide.md
src/alina_rag/: __init__.py  __main__.py  agent.py  auto_index.py  batch.py  batch_mode.py  config.py  console.py  console_bot.py  db.py  indexer.py  loaders.py  main.py  models.py  prompts.py  search.py  test_mode.py  vk_bot.py
src/alina_rag/application/: agent_service.py  chat_service.py  document_service.py  prompts.py
src/alina_rag/domain/: interfaces.py  models.py
src/alina_rag/evaluation/: evaluator.py  runner.py
src/alina_rag/infrastructure/: base_embedding.py  base_llm.py  bm25_store.py  chroma_store.py  chunker.py  document_parser.py  embedding_provider.py  ollama_provider.py  openai_provider.py  session_store.py  sqlite_repo.py
src/alina_rag/presentation/: api.py  console.py  telegram_bot.py  vk_bot.py
src/gpss_helper/: bm25_search.py  cli.py  config.py  indexer.py  models.py  rag_agent.py  vector_store.py
src/gpss_helper/modes/: batch.py  console.py  test.py  vk_bot.py
task/: Задания на прозв.практику 2026.docx  Задания на прозв.практику 2026.md
tests/: conftest.py  questions_batch.csv  questions_test.csv  test_evaluator.py  test_plan.csv  test_runner.py
