[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/alina_rag"]

[project]
name = "alina-rag"
version = "0.1.0"
description = "AI Consultant for ALINA GPSS — Agentic RAG application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "ollama>=0.4.0",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "python-telegram-bot>=21.0",
    "vk-api>=11.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.24.0",
    "openpyxl>=3.1.0",
    "aiosqlite>=0.20.0",
    "rank-bm25>=0.2.0",
    "typer>=0.12.0",
]

[project.scripts]
alina-rag = "alina_rag.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (pydantic)
]

[tool.ruff.lint.isort]
known-first-party = ["alina_rag"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.analysis]
replace-imports-with-any = [
    "chromadb.**",
    "sentence_transformers.**",
    "ollama.**",
    "vk_api.**",
    "telegram.**",
    "pymupdf.**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "ty>=0.0.55",
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
