[project]
name = "gpss-helper"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "vk-api>=11.9.0",
]

[project.scripts]
gpss-helper = "gpss_helper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpss_helper"]
